--- a/app.css
+++ b/app.css
@@ -85,7 +85,7 @@ h3 {
   padding: 1rem 0;
   width: 20rem;
   text-align: center;
-  /* border: 0.1rem solid #56a5eb; */
+  border: 0.1rem solid #56a5eb;
   margin-bottom: 1rem;
   color: #56a5eb;
   text-decoration: none;
@@ -105,4 +105,31 @@ h3 {
   cursor: not-allowed;
   box-shadow: none;
   transform: none;
+}
+
+/* FORM END Page */
+#finalScore {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+form {
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+}
+
+input {
+  margin-bottom: 1rem;
+  height: 4rem;
+  /* border: 1px solid #56a5eb; */
+  box-shadow: 0 0.5rem 1rem #56a5eb;
+  border: none;
+}
+
+input::placeholder {
+  color: #56a5eb;
+  letter-spacing: .5rem;
+  font-size: 2rem;
 }
